great class commit

--- a/tfletcher.html
+++ b/tfletcher.html
@@ -10,5 +10,9 @@
         Hello world!
 
         Teagen Fletcher
+
+        This project rocks 
+        This class has been so helpful
+        The teacher is great!
       </body> 
     </html> 
