asssigment is fun

--- a/tfletcher.html
+++ b/tfletcher.html
@@ -10,9 +10,9 @@
         Hello world!
 
         Teagen Fletcher
+        This class is awesome
+        The assignment is informational 
+        The teacher is a blast!
 
-        This project rocks 
-        This class has been so helpful
-        The teacher is great!
       </body> 
     </html> 
