--- a/tfletcher.html
+++ b/tfletcher.html
@@ -4,10 +4,13 @@
       <head> 
 <meta charset=“utf-8”> 
 <title> Git Test Page </title> 
+
+<link rel="stylesheet" type="text/css" href="style.css" /> 
 </head> 
        
 <body> 
         Hello world! Again
+
 
         Teagen Fletcher
         This class is awesome
